re-implementation of red-black-trees